--- a/waste.html
+++ b/waste.html
@@ -12,6 +12,7 @@
             background-color: rgb(243, 243, 243);
              overflow: scroll;
               overflow-x: hidden;
+            dfgdgdgrdyh
 }
 
         .header{
